<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_main"
    >
	<TextView  
		android:id="@+id/fila1"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/menu"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:gravity="center_horizontal"
	    android:textSize="30dp"
	    android:textStyle="bold"
	    android:textColor="#000000"
    />
	<Button 
		android:id="@+id/mintest"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mintest"
		android:textSize="20dp"
	    android:textStyle="bold"
		android:layout_below="@+id/fila1"
		android:background="@drawable/custom_button"
		android:layout_margin="3dp"	
	/>
	<Button
		android:id="@+id/training"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/training"
		android:textSize="20dp"
	    android:textStyle="bold"
		android:layout_below="@+id/mintest"
		android:background="@drawable/custom_button"
		android:layout_margin="3dp"	
	/>	
	<Button
		android:id="@+id/hof"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/hof"
		android:textSize="20dp"
	    android:textStyle="bold"
		android:layout_below="@+id/training"
		android:layout_marginTop="15dp"
		android:layout_marginRight="3dp"
		android:layout_marginLeft="3dp"
		android:background="@drawable/custom_button"
		
	/>	
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
    >
	    <Button 
			android:id="@+id/endgame"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/endgame"
			android:textSize="20dp"
	        android:textStyle="bold"
			android:background="@drawable/custom_button"	
			android:layout_margin="3dp"
		/>	
	</RelativeLayout>
</RelativeLayout>
