<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:background="@drawable/background_hof"
    >
    <TextView  
		android:id="@+id/hoftitle"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/hof"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:gravity="center_horizontal"
	    android:textSize="30dp"
	    android:textStyle="bold"
	    android:textColor="#000000"
    />
	<ScrollView 
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/hoftitle"
    >
    	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:id="@+id/hoftable"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:paddingLeft="20dip"
    		android:stretchColumns="1,2,3"
    		>
    		<TableRow>
        		<TextView
            		android:text="@string/pointsh"
            		android:gravity="center_horizontal"
            		android:textColor="#000000"
            		android:textStyle="bold"
            		android:padding="3dip" />
        		<TextView
            		android:text="@string/playernameh"
            		android:gravity="center_horizontal"
            		android:textColor="#000000"
            		android:textStyle="bold"
            		android:padding="3dip" />
            	<TextView
            		android:text="@string/dateh"
            		android:gravity="center_horizontal"
            		android:textColor="#000000"
            		android:textStyle="bold"
            		android:padding="3dip" />
    		</TableRow>

		</TableLayout>
    </ScrollView>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
    >
	    <Button 
			android:id="@+id/exithof"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/back"
			android:textSize="20dp"
	        android:textStyle="bold"
			android:background="@drawable/custom_button"	
			android:layout_margin="3dp"
		/>	
	</RelativeLayout>
</RelativeLayout>